--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,4 @@ pymysql>=1.0.0,<2.0.0
 bcrypt>=4.0.0,<5.0.0
 python-dotenv>=1.0.0,<2.0.0
 cryptography>=42.0.0,<43.0.0
-python-dotenv>=1.1.0,<1.2.0
+rsa>=4.9,<5.0
