--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi>=0.115.0,<0.116.0
-uvicorn>=0.30.0,<0.31.0
-sqlalchemy>=2.0.0,<3.0.0
-pymysql>=1.0.0,<2.0.0
-bcrypt>=4.0.0,<5.0.0
-python-dotenv>=1.0.0,<2.0.0
-cryptography>=42.0.0,<43.0.0
-rsa>=4.9,<5.0
+fastapi==0.115.12
+uvicorn==0.34.2
+SQLAlchemy==2.0.41
+PyMySQL==1.1.1
+bcrypt==4.3.0
+python-dotenv==1.1.0
+cryptography==45.0.2
+rsa==4.9.1
 Jinja2==3.1.6
-python-multipart>=0.0.20,<0.0.30
+python-multipart==0.0.20
